--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/roodhouse/socialNetworkAPI#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^6.7.5"
+    "mongoose": "^6.7.5",
+    "validator": "^13.7.0"
   }
 }
